--- a/src/main/resources/fxmlFile/fxmlGame.fxml
+++ b/src/main/resources/fxmlFile/fxmlGame.fxml
@@ -186,7 +186,7 @@
                     <HBox alignment="TOP_LEFT" prefHeight="-1.0" prefWidth="-1.0" spacing="10.0">
                       <children>
                         <Button id="buttonTool2" fx:id="buttonTool1" maxWidth="-1.0" minHeight="30.0" minWidth="70.0" mnemonicParsing="false" text="Utilizza" translateX="0.0" />
-                        <Button fx:id="buttonZoomTool1" minHeight="30.0" minWidth="70.0" mnemonicParsing="false" text="Ingrandisci" />
+                        <Button fx:id="buttonZoomTool1" minHeight="30.0" minWidth="70.0" mnemonicParsing="false" onAction="#handlezoomTool1" text="Ingrandisci" />
                       </children>
                     </HBox>
                   </children>
