--- a/src/main/resources/fxmlFile/fxmlGame.fxml
+++ b/src/main/resources/fxmlFile/fxmlGame.fxml
@@ -158,7 +158,7 @@
             <HBox id="hboxR" fx:id="hboxBottoni" alignment="CENTER" prefHeight="-1.0" prefWidth="-1.0" spacing="50.0">
               <children>
                 <Button fx:id="buttonRiserva" font="$x2" minHeight="50.0" minWidth="100.0" mnemonicParsing="false" onAction="#handleRiserva" text="Riserva" />
-                <Button font="$x2" minHeight="50.0" minWidth="100.0" mnemonicParsing="false" text="Tracciato" />
+                <Button fx:id="buttonTracciato" font="$x2" minHeight="50.0" minWidth="100.0" mnemonicParsing="false" onAction="#handleTracciato" text="Tracciato" />
                 <Button font="$x2" minHeight="50.0" minWidth="100.0" mnemonicParsing="false" text="Skip turno" />
               </children>
             </HBox>
