--- a/src/main/java/it/polimi/se2018/view/GUIMain.form
+++ b/src/main/java/it/polimi/se2018/view/GUIMain.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="it.polimi.se2018.view.GUIMain">
-  <grid id="cbd77" binding="contentPane" layout-manager="GridLayoutManager" row-count="5" column-count="8" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="cbd77" binding="contentPane" layout-manager="GridLayoutManager" row-count="6" column-count="8" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="10" left="10" bottom="10" right="10"/>
     <constraints>
       <xy x="48" y="54" width="904" height="525"/>
@@ -11,7 +11,7 @@
       <grid id="94766" layout-manager="GridLayoutManager" row-count="1" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
-          <grid row="2" column="0" row-span="3" col-span="7" vsize-policy="1" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <grid row="2" column="0" row-span="4" col-span="7" vsize-policy="1" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties/>
         <border type="none"/>
@@ -387,7 +387,7 @@
             <border type="none"/>
             <children>
               <component id="a6317" class="javax.swing.JLabel" binding="tool2Label">
-                <constraints border-constraint="West"/>
+                <constraints border-constraint="Center"/>
                 <properties>
                   <text value=""/>
                 </properties>
@@ -470,6 +470,14 @@
           </component>
         </children>
       </grid>
+      <component id="7200b" class="javax.swing.JButton" binding="terminaTurnoButton" default-binding="true">
+        <constraints>
+          <grid row="4" column="7" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Termina Turno"/>
+        </properties>
+      </component>
     </children>
   </grid>
 </form>
