--- a/src/main/java/it/polimi/se2018/view/GUISwingChooseBoard.form
+++ b/src/main/java/it/polimi/se2018/view/GUISwingChooseBoard.form
@@ -21,7 +21,7 @@
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="RadioButton"/>
+              <text value="Plancia 1"/>
             </properties>
           </component>
           <component id="a73f3" class="javax.swing.JRadioButton" binding="radioButton2" default-binding="true">
@@ -29,7 +29,7 @@
               <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="RadioButton"/>
+              <text value="Plancia 2"/>
             </properties>
           </component>
           <component id="1e383" class="javax.swing.JRadioButton" binding="radioButton3" default-binding="true">
@@ -37,7 +37,7 @@
               <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="RadioButton"/>
+              <text value="Plancia 3"/>
             </properties>
           </component>
           <component id="b387b" class="javax.swing.JRadioButton" binding="radioButton4" default-binding="true">
@@ -45,7 +45,7 @@
               <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="RadioButton"/>
+              <text value="Plancia 4"/>
             </properties>
           </component>
         </children>
