--- a/src/main/java/it/polimi/se2018/view/GUIMain.form
+++ b/src/main/java/it/polimi/se2018/view/GUIMain.form
@@ -434,7 +434,7 @@
           <text value="Piazza un Dado"/>
         </properties>
       </component>
-      <grid id="d473b" layout-manager="GridLayoutManager" row-count="1" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="d473b" layout-manager="GridLayoutManager" row-count="1" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="1" hsize-policy="3" anchor="0" fill="3" indent="1" use-parent-layout="false">
@@ -466,6 +466,14 @@
             </constraints>
             <properties>
               <text value="Round"/>
+            </properties>
+          </component>
+          <component id="95382" class="javax.swing.JLabel" binding="privateObjectiveLabel">
+            <constraints>
+              <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="Obiettivo privato"/>
             </properties>
           </component>
         </children>
